[gd_scene load_steps=16 format=3 uid="uid://deeryhksmvs2m"]

[ext_resource type="Script" path="res://enemy/enemy_controller.gd" id="1_pi25j"]
[ext_resource type="Script" path="res://enemy/enemy_sound_effects.gd" id="2_jaulv"]
[ext_resource type="Script" path="res://enemy/enemy_walking_sounds.gd" id="3_ruucy"]
[ext_resource type="AudioStream" uid="uid://c46xfjlsommfp" path="res://audio/sound_files/monster/Monster_Footsteps.mp3" id="3_wgj4f"]
[ext_resource type="PackedScene" uid="uid://dgyo2xln80eos" path="res://enemy/enemy_mesh.tscn" id="5_bficc"]
[ext_resource type="Script" path="res://StateMachines/Enemy/Enemy_State_Machine.gd" id="6_rfg1c"]
[ext_resource type="Script" path="res://StateMachines/Enemy/States/Enemy_Idle.gd" id="7_y3mie"]
[ext_resource type="Script" path="res://StateMachines/Enemy/States/Enemy_Follow.gd" id="8_27t0j"]
[ext_resource type="Script" path="res://StateMachines/Enemy/States/Enemy_Attack.gd" id="9_keaip"]
[ext_resource type="Script" path="res://StateMachines/Enemy/States/Enemy_Retreat.gd" id="10_2u20i"]
[ext_resource type="Script" path="res://enemy/Enemy_Inactive.gd" id="11_rwiur"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_x8y0j"]

[sub_resource type="BoxShape3D" id="BoxShape3D_m7tor"]
size = Vector3(1, 2, 1)

[sub_resource type="SphereShape3D" id="SphereShape3D_164af"]
radius = 23.8479

[sub_resource type="BoxShape3D" id="BoxShape3D_3c80v"]
size = Vector3(1, 1.5, 0.5)

[node name="Enemy" type="CharacterBody3D" node_paths=PackedStringArray("sound_effects", "walking_sound") groups=["enemy"]]
script = ExtResource("1_pi25j")
sound_effects = NodePath("EnemySoundEffects")
walking_sound = NodePath("EnemyWalkingSounds")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_x8y0j")

[node name="Hitbox" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Hitbox"]
shape = SubResource("BoxShape3D_m7tor")

[node name="Player_Detection" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Player_Detection"]
shape = SubResource("SphereShape3D_164af")

[node name="Damage_Detection" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Damage_Detection"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, -0.75)
shape = SubResource("BoxShape3D_3c80v")

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="."]
path_height_offset = 0.5

[node name="Face_Direction" type="Node3D" parent="."]

[node name="EnemySoundEffects" type="AudioStreamPlayer3D" parent="."]
max_polyphony = 3
bus = &"SoundEffects"
script = ExtResource("2_jaulv")

[node name="EnemyWalkingSounds" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("3_wgj4f")
pitch_scale = 1.4
bus = &"SoundEffects"
script = ExtResource("3_ruucy")

[node name="Enemy_Mesh" parent="." instance=ExtResource("5_bficc")]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0)

[node name="Skeleton3D" parent="Enemy_Mesh/Armature" index="0"]
bones/0/position = Vector3(-2.33809, 1.10333, -97.875)
bones/0/rotation = Quaternion(-0.72528, -0.0158795, 0.000843961, 0.68827)
bones/1/rotation = Quaternion(-0.0487127, -0.00330064, 0.00213428, 0.998805)
bones/2/rotation = Quaternion(0.0143159, -0.031107, 0.00174112, 0.999412)
bones/3/rotation = Quaternion(0.0714997, -0.0309746, 0.00433147, 0.99695)
bones/4/rotation = Quaternion(0.000195726, 0.0188139, -0.0134015, 0.999733)
bones/5/rotation = Quaternion(0.0444134, 0.00517648, 0.0333329, 0.998444)
bones/6/rotation = Quaternion(-0.431824, -0.558388, 0.584601, -0.399967)
bones/7/rotation = Quaternion(0.528832, 0.243412, 0.23411, 0.778639)
bones/8/rotation = Quaternion(6.78251e-07, -1.97128e-07, 0.267607, 0.963528)
bones/9/rotation = Quaternion(0.0917425, 0.0193562, -0.117416, 0.988647)
bones/10/rotation = Quaternion(0.185403, -0.0835448, 0.110346, 0.972867)
bones/11/rotation = Quaternion(-0.0215216, 0.000462552, -0.119807, 0.992564)
bones/12/rotation = Quaternion(-0.0347993, 0.000816138, -0.0494777, 0.998168)
bones/13/rotation = Quaternion(0.196674, -0.00472392, -0.000233294, 0.980458)
bones/14/rotation = Quaternion(0.333306, -0.000206554, -0.0408071, 0.941935)
bones/15/rotation = Quaternion(0.10619, 0.000324739, -0.00977197, 0.994298)
bones/16/rotation = Quaternion(0.244086, 0.00267808, -0.0277868, 0.969352)
bones/17/rotation = Quaternion(0.226411, -0.00127329, -0.0327982, 0.973479)
bones/18/rotation = Quaternion(0.0759108, 2.18315e-05, -0.00887422, 0.997075)
bones/19/rotation = Quaternion(0.320854, 0.00193532, -0.0291238, 0.946679)
bones/20/rotation = Quaternion(0.119103, -0.000630058, -0.0196271, 0.992688)
bones/21/rotation = Quaternion(0.0324968, -8.56622e-05, -0.00655492, 0.99945)
bones/22/rotation = Quaternion(0.346563, 0.00488944, -0.0640771, 0.935823)
bones/23/rotation = Quaternion(0.175773, 0.00745992, 0.0214326, 0.984169)
bones/25/rotation = Quaternion(0.488951, -0.525465, 0.532816, 0.448242)
bones/26/rotation = Quaternion(0.530514, -0.201316, -0.231519, 0.790206)
bones/27/rotation = Quaternion(2.83715e-07, -9.8846e-08, -0.263003, 0.964795)
bones/28/rotation = Quaternion(-0.00480321, 0.0344977, 0.135139, 0.990214)
bones/29/rotation = Quaternion(0.17566, 0.0476893, -0.103309, 0.977853)
bones/30/rotation = Quaternion(-0.00385505, -0.036537, 0.107637, 0.993511)
bones/31/rotation = Quaternion(-0.029721, -0.000784057, 0.00292681, 0.999554)
bones/32/rotation = Quaternion(0.0835218, -0.00239671, 0.0413268, 0.995646)
bones/33/rotation = Quaternion(0.334051, 1.53542e-06, 0.0407137, 0.941675)
bones/34/rotation = Quaternion(0.0770469, 3.86859e-08, 0.00938954, 0.996983)
bones/35/rotation = Quaternion(0.149638, -0.000775499, 0.0275536, 0.988357)
bones/36/rotation = Quaternion(0.284063, 2.16619e-07, 0.0346181, 0.95818)
bones/37/rotation = Quaternion(0.0620616, 0.0100162, 0.00803935, 0.99799)
bones/38/rotation = Quaternion(0.220455, 0.00639991, 0.0032281, 0.975371)
bones/39/rotation = Quaternion(0.211811, 1.93836e-06, 0.0258209, 0.976969)
bones/40/rotation = Quaternion(0.0462069, 0.0116361, 0.00599246, 0.998846)
bones/41/rotation = Quaternion(0.272613, 0.0135135, -0.0114271, 0.961961)
bones/42/rotation = Quaternion(0.190066, 2.14489e-06, 0.0231731, 0.981498)
bones/43/rotation = Quaternion(0.0241542, -3.25306e-07, 0.00293307, 0.999704)
bones/44/rotation = Quaternion(0.0517366, 0.0571147, 0.995836, -0.0487031)
bones/45/rotation = Quaternion(-0.215045, -0.0770806, 0.0219615, 0.97331)
bones/46/rotation = Quaternion(0.620498, -0.037498, -0.00932014, 0.783256)
bones/47/rotation = Quaternion(0.229298, -0.0325171, -0.0153363, 0.972692)
bones/48/rotation = Quaternion(-0.0800487, 0.0546079, 0.994963, 0.0256546)
bones/49/rotation = Quaternion(-0.19599, 0.0324213, -0.00860075, 0.980032)
bones/50/rotation = Quaternion(0.610219, 0.0234068, 0.000791992, 0.791887)
bones/51/rotation = Quaternion(0.228007, 0.0321189, 0.0152523, 0.97301)

[node name="BoneAttachment3D" parent="Enemy_Mesh/Armature/Skeleton3D" index="2"]
transform = Transform3D(0.992881, -0.0605641, -0.102569, 0.108495, 0.104401, 0.9886, -0.0491653, -0.992689, 0.110228, -2.15782, 0.513694, -157.93)

[node name="BoneAttachment3D2" parent="Enemy_Mesh/Armature/Skeleton3D" index="3"]
transform = Transform3D(0.496963, 0.299454, -0.814466, -0.858, 0.029111, -0.512823, -0.129857, 0.953666, 0.271399, 16.9061, -4.22751, -141.264)

[node name="BoneAttachment3D4" parent="Enemy_Mesh/Armature/Skeleton3D" index="4"]
transform = Transform3D(0.343057, -0.297363, 0.891004, 0.935011, 0.0174074, -0.354191, 0.0898133, 0.954606, 0.284009, -20.323, -7.53495, -141.052)

[node name="BoneAttachment3D3" parent="Enemy_Mesh/Armature/Skeleton3D" index="5"]
transform = Transform3D(-0.9643, 0.0483204, 0.260367, 0.23857, -0.268222, 0.93335, 0.114936, 0.962144, 0.247119, 9.83295, 8.21288, -51.1051)

[node name="BoneAttachment3D5" parent="Enemy_Mesh/Armature/Skeleton3D" index="6"]
transform = Transform3D(-0.965389, -0.0135649, -0.260463, -0.250399, -0.231205, 0.94013, -0.072973, 0.972811, 0.219806, -15.0087, 7.45146, -51.4491)

[node name="EnemyStateMachine" type="Node" parent="."]
script = ExtResource("6_rfg1c")
initial_state = NodePath("Inactive")

[node name="Idle" type="Node" parent="EnemyStateMachine"]
script = ExtResource("7_y3mie")

[node name="Follow" type="Node" parent="EnemyStateMachine"]
script = ExtResource("8_27t0j")

[node name="Attack" type="Node" parent="EnemyStateMachine"]
script = ExtResource("9_keaip")

[node name="Retreat" type="Node" parent="EnemyStateMachine"]
script = ExtResource("10_2u20i")

[node name="Inactive" type="Node" parent="EnemyStateMachine"]
script = ExtResource("11_rwiur")

[connection signal="attack" from="." to="Enemy_Mesh/AnimationTree" method="SetAttack"]
[connection signal="attack2" from="." to="Enemy_Mesh/AnimationTree" method="SetAttack2"]
[connection signal="on_died" from="." to="Enemy_Mesh/AnimationTree" method="Kill"]
[connection signal="running" from="." to="Enemy_Mesh/AnimationTree" method="SetRunning"]
[connection signal="animation_signal" from="Enemy_Mesh" to="." method="_on_enemy_mesh_animation_signal"]
[connection signal="animation_finished" from="Enemy_Mesh/AnimationTree" to="." method="_on_anim_finished"]

[editable path="Enemy_Mesh"]
